--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,10 @@
 {
     "cSpell.words": [
-        "KHOJ"
+        "cigu",
+        "googleusercontent",
+        "Horiz",
+        "KHOJ",
+        "qfhdrejlujfj",
+        "signin"
     ]
 }
